--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "gsap": "^3.13.0",
     "helmet": "^7.1.0",
     "nodemailer": "^6.10.1"
   },
