--- a/package.json
+++ b/package.json
@@ -6,27 +6,21 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "deploy": "./scripts/deploy.sh",
-    "build": "echo 'No build step required for static site'",
-    "test": "echo 'No tests configured'"
+    "build": "npm ci --prefix client && npm run build --prefix client"
   },
   "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "gsap": "^3.13.0",
+    "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "nodemailer": "^6.10.1"
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": [
-    "law firm",
-    "legal services",
-    "website"
-  ],
+  "keywords": ["law firm", "legal services", "website"],
   "author": "Shukla & Shukla Associates",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "22.x"
+  }
 }
